# Agent-Games-Design

./: .editorconfig  .env.example  .gitignore  Dockerfile  Makefile  README.md  STANDARD_API_UPDATE_SUMMARY.md  docker-compose.yml  pyproject.toml  test_config.yaml  test_config_strict.yaml
configs/: star_courier_Aya.yaml  star_courier_Kilo.yaml
docs/: ASSET_GENERATION.md  CONFIGURATION.md  GPT5_CONSTRAINTS.md  GPT5_OFFICIAL_SUPPORT.md  GPT5_RESPONSES_API.md  MIGRATION_SUMMARY.md  MIGRATION_TO_STANDARD_API.md  QUICKSTART.md  REACT_AGENT_GUIDE.md  REPORT.md  RESPONSES_API_V1_FORMAT.md  RESPONSES_V1_FIX_SUMMARY.md  TESTING_COMPLETE.md  TEST_REPORT.md
examples/: advanced_agent.py  basic_agent.py  langsmith_evaluation_example.py  react_game_design_workflow.py  tool_usage.py  (+1 more)
prompt_generation/: .env.example  .gitignore  README.md  generate_prompts.py  inspect_sdk.py  pyproject.toml  requirements.txt
prompt_generation/configs/: _template.yaml  aethel.yaml  empty.yaml  generated_config_Aya.yaml  generated_config_Corp_Patrol.yaml  generated_config_Docker.yaml  generated_config_Dockers_Union.yaml  generated_config_Fixer.yaml  generated_config_Grandma_Imani.yaml  generated_config_Heavy_Patrol.yaml  generated_config_Kilo.yaml  generated_config_Mei.yaml  generated_config_Mira_Chen.yaml  generated_config_Neighborhood_Fixers.yaml  generated_config_Rafiq.yaml  generated_config_Rook.yaml  generated_config_Street_Vendor.yaml  generated_config_Street_Vendors.yaml  generated_config_Switch.yaml  generated_config_Taj.yaml  start-corier.yaml  tank.yaml
prompt_generation/docs/: CHANGES_CONSISTENT_VIEWS.md  CODEBASE_REPORT.md  CONSISTENT_VIEWS.md  IMPLEMENTATION_SUMMARY.md  QUICK_START_CONSISTENT_VIEWS.md
prompt_generation/src/: __init__.py  file_utils.py  models.py  stage1_base_prompts.py  stage2_gemini_prompts.py  stage2_llm_refiner.py  stage3_common_prompts.py  stage4_image_generation.py  stage5_hunyuan3d.py
prompt_generation/src/archive/: stage2_llm_refiner.py
prompt_generation/src/providers/: __init__.py  hunyuan3d_provider.py  openai_compat_hunyuan3d.py  raw_http_hunyuan3d.py  sdk_hunyuan3d.py  tencent_cos.py
prompt_generation/tests/: __init__.py  conftest.py  test_consistent_views.py  test_hunyuan3d_provider.py  test_stage5_hunyuan3d.py
(+46 files in other folders)
