[project]
name = "agent-games-design"
version = "0.1.0"
description = "LangGraph-based agent game design system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.45",
    "langchain>=0.3.7",
    "langchain-openai>=0.3.9",  # Minimum version for Responses API support
    "langchain-anthropic>=0.2.4",
    "langchain-community>=0.3.5",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "langsmith>=0.4.37",
    "httpx>=0.28.0",
    "openai>=1.0.0",  # GPT-5 Pro support via Responses API
    "fal-client>=0.4.1",  # FAL AI image generation
    "google-genai>=1.0.0",  # Gemini 3 Pro image generation
]

[project.scripts]
agent-games = "agent_games_design.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.10.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_games_design"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
